--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.1.2",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
